Created Big Drop Daily.png; Edited settings, theme/parameters.yaml and Form1

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,5 +1,6 @@
 unique_ids:
   assets:
+    Big Drop Daily.png: '1751642967378389666757591.75305'
     standard-page.html: PVIA65FYWXRG5TGL224G372WD5T46RQO
     theme.css: SABDUBWDVQBYE5VXH4LQWKXADCSF65MT
   forms:
