--- a/anvil.yaml
+++ b/anvil.yaml
@@ -1,7 +1,8 @@
 allow_embedding: false
 dependencies: []
-name: M3 App 1
-package_name: M3_App_1
+metadata: {logo_img: 'asset:Big Drop Daily.png'}
+name: BigDropDaily
+package_name: BigDropDaily
 renamed: true
 runtime_options:
   client_version: '3'
