--- a/theme/parameters.yaml
+++ b/theme/parameters.yaml
@@ -29,6 +29,10 @@ color_scheme:
   - {color: 'rgba(103, 80, 164, 0.05)', name: Primary Overlay 1}
   - {color: 'rgba(103, 80, 164, 0.08)', name: Primary Overlay 2}
   - {color: 'rgba(103, 80, 164, 0.11)', name: Primary Overlay 3}
+  - {color: '#000000', name: ''}
+  - {color: '#000000', name: ''}
+  - {color: '#000000', name: ''}
+  - {color: '#000000', name: ''}
   preset_groups:
   - name: Colour Scheme
     options:
