--- a/anvil.yaml
+++ b/anvil.yaml
@@ -1,4 +1,10 @@
 allow_embedding: false
+db_schema:
+  table_1:
+    client: none
+    columns: []
+    server: full
+    title: Table 1
 dependencies: []
 metadata: {logo_img: 'asset:Big Drop Daily.png'}
 name: BigDropDaily
